# data-continuum

./: .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  package-release.yml  release-please.yml  security.yml  unit-tests.yml  windows-installer.yml
airflow/dags/: data_pipeline.py
api/: Dockerfile  main.py  requirements.txt
architecture/: index.html
deploy/kubernetes/helm/data-continuum/: Chart.yaml  values.yaml
deploy/kubernetes/helm/data-continuum/templates/: _helpers.tpl  airflow.yaml  api.yaml  infrastructure.yaml  ml.yaml  seeder.yaml  ui.yaml
deploy/windows/: README.md  install_services.ps1  installer.iss
deployment/kubernetes/: index.html
deployment/process-based/: index.html
docs/: architecture.md  index.md  observability.md  orchestration.md
docs/deployment/: kubernetes.md  process-based.md
docs/services/: api.md  ingestion.md  ml.md
ml/: Dockerfile  main.py  requirements.txt
observability/: index.html  prometheus.yml
orchestration/: index.html
scripts/: run_api.ps1  run_ml.ps1  run_ui.ps1  start_all.ps1
search/: search_index.json
seeder/: Dockerfile  main.py  requirements.txt
services/api/: index.html
services/ingestion/: index.html
services/ml/: index.html
tests/api/: test_main.py
tests/ml/: test_main.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.jsx  App.test.jsx
