[project]
name = "data-continuum"
version = "0.1.0"
description = "Data-Continuum Polyglot Persistence Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.1",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "motor>=3.4.0",
    "pydantic>=2.6.4",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "mlflow>=2.11.3",
    "scikit-learn>=1.4.1.post1",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "faker>=24.0.0",
    "psycopg2-binary>=2.9.9",
    "pymongo>=4.6.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.5",
    "pre-commit>=3.7.0",
    "pytest>=8.1.1",
    "httpx>=0.27.0",
]
docs = [
    "mkdocs-material>=9.5.17",
    "mkdocstrings[python]>=0.24.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"
