[project]
name = "data-continuum"
version = "0.1.0"
description = "Data-Continuum Polyglot Persistence Architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "asyncpg",
    "motor",
    "pydantic",
    "prometheus-fastapi-instrumentator",
    "mlflow",
    "scikit-learn",
    "pandas",
    "numpy",
    "faker",
    "psycopg2-binary",
    "pymongo",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.5",
    "pre-commit>=3.7.0",
    "pytest>=8.1.1",
    "httpx>=0.27.0",
    "nuitka",
]
docs = [
    "mkdocs-material>=9.5.17",
    "mkdocstrings[python]>=0.24.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"
